<resources>
    <string name="app_name">Project Sport</string>
    <string name="search_title">Search</string>
    <string name="nav_menu_item_article">Статьи</string>
    <string name="nav_menu_item_calories_counter">Калькуляторы</string>
    <string name="nav_menu_item_index_body_weight">Индекс массы тела</string>
    <string name="nav_menu_item_day_need_cal">Потребность в калориях</string>
    <string name="nav_menu_item_calc_food">Пищевой калькулятор</string>
    <string name="nav_menu_item_settings">Настройки</string>
    <string name="nav_menu_item_step_counter">Шагомер</string>
    <string name="nav_menu_item_statistics">Моя статистика</string>
    <string name="nav_menu_item_help">Помощь</string>
    <string name="nav_menu_item_about_us">О нас</string>
    <string name="nav_menu_item_additional_info">Доп. информация</string>
    <string name="navigation_view_open">Open</string>
    <string name="navigation_view_close">Close</string>
    <string name="preferences_title">Настройки</string>
    <string name="text_your_height">Рост : </string>
    <string name="text_your_weight">Вес : </string>
    <string name="text_your_sex">Пол : </string>
    <string name="text_your_sex_M">М</string>
    <string name="text_your_sex_F">Ж</string>
    <string name="text_your_goal">Цель : </string>
    <string name="text_your_time">Время : </string>
    <string name="text_your_age">Возраст :</string>
    <string name="text_bt_change_your_hw">Изменить параметры</string>
    <string name="buttonShowListTodayFoodText">Список</string>
    <string name="text_ccal">кКал</string>
    <string name="tag_fragment_article">ArticleFragment</string>
    <string name="tag_fragment_calculate_food">CalculateFoodFragment</string>
    <string name="tag_fragment_calculate_details_food">CalculateDetailsFoodFragment</string>
    <string name="tag_fragment_index_body">IndexBodyFragment</string>
    <string name="tag_fragment_need_calories">NeedCaloriesFragment</string>
    <string name="tag_fragment_step_counter">StepCounterFragment</string>
    <string name="temp_text_example_fragment">Здесь будут статьи</string>
    <string name="alertAddFoodTitle">Калькулятор</string>
    <string name="alertAddFoodMessage">Введите количество пищи:</string>
    <string name="alertAddFoodPositiveBt">Посчитать</string>
    <string name="alertAddFoodNegativeBt">Отмена</string>
    <string name="toastMistake">Введите количество выбранной пищи!</string>
    <string name="alertAddFoodEditTextHintText">100</string>
    <string name="alertChangeTodayList">Сегодня :</string>
    <string name="alertChangeTodayListCategoryFood">Категория :</string>
    <string name="alertChangeTodayListNameFood">Название :</string>
    <string name="alertChangeTodayListDeleteTitle">Удаление записи</string>
    <string name="alertChangeTodayListDeleteMessage">Удалить запись?</string>
    <string name="alertChangeTodayListDeleteButtonText">Удалить</string>
    <string name="alertChangeUserInfoTitle">Ваши физические параметры</string>
    <string name="alertChangeUserInfoMessage">
        Введите новые значения пола, возраста, роста и веса:\n\nВозраст от 16 лет, рост от 75 см, вес от 25 кг
    </string>
    <string name="alertChangeUserInfoButtonPositive">Подтвердить</string>
    <string name="alertChangeUserInfoButtonNegative">Отмена</string>
    <string name="hint_weight">Вес в килограммах</string>
    <string name="hint_height">Рост в сантиметрах</string>
    <string name="hint_age">Возраст</string>
    <string name="hint_food_weight">Вес в граммах</string>
    <string name="hint_target_step_count">Количество шагов</string>
    <string name="title_activity_activity_other_calculators">Фитнес калькулятор</string>
    <string name="text_normal_index_body_min">Минимум</string>
    <string name="text_normal_index_body_ideal">Идеал</string>
    <string name="text_normal_index_body_max">Максимум</string>
    <string name="text_normal_index_body_normal">Индекс массы тела</string>
    <string name="text_bt_calculate_index">Посчитать индекс</string>
    <string name="text_normal_index_body_min_value">18</string>
    <string name="text_normal_index_body_ideal_value">22</string>
    <string name="text_normal_index_body_max_value">25</string>
    <string name="alertIndexBodyTitle">Индекс массы тела</string>
    <string name="alertIndexBodyPositiveBt">Посчитать</string>
    <string name="alertIndexBodyNegativeBt">Отмена</string>
    <string name="alertIndexBodyMessage">Введите рост и вес:\n\nРост от 75 см, вес от 25 кг</string>
    <string name="text_user_info_from_DB">Использовать параметры из настроек</string>
    <string name="text_user_info_new_input_info">Ввести новые данные</string>
    <string name="text_err_input_index_body">Введите рост и вес!</string>
    <string name="text_zero">0</string>
    <string name="text_your_index_body">Ваш индекс массы тела равен:</string>
    <string name="text_index_body_less_min">
        Ваш индекс массы тела меньше нормы. Возможно, Вам стоит пересмотреть свой рацион питания,
        чтобы набрать некоторое количество веса.
    </string>
    <string name="text_index_body_min">
        Ваш индекс массы тела находится на нижней границе нормы. Возможно, если Вы наберете еще несколько
        килограмм, то почувствуете себя немного лучше и приблизитесь к своему идеальному весу.
    </string>
    <string name="text_index_body_ideal">
        Ваш индекс массы тела практически идеален. Продолжайте в том же духе! Здоровый образ жизни -
        это действительно правильный выбор!
    </string>
    <string name="text_index_body_max">
        Ваш индекс массы тела находится на верхней границе нормы. Возможно, Вам стоит немного
        изменить свой рацион питания и Вы приблизитесь к своему идеальному весу.
    </string>
    <string name="text_index_body_excess">
        Ваш индекс массы тела свидетельствует о лишнем весе. Возможно, Вам стоит немного
        изменить свой рацион питания и Вы вернетесь к своему нормальному весу.
    </string>
    <string name="text_index_body_obesity_1">
        Ваш индекс массы тела свидетельствует о первой стадии ожирения. Вам следует пересмотреть
        свой рацион питания и, возможно, заняться спортом или фитнессом. Поход в спортзал пойдет
        Вам на пользу и поможет сбросить вес.
    </string>
    <string name="text_index_body_obesity_2">
        Ваш индекс массы тела свидетельствует о второй стадии ожирения. Вам следует пересмотреть
        свой рацион питания и обязательно заняться спортом или фитнессом. Поход в спортзал пойдет
        Вам на пользу и поможет сбросить вес.
    </string>
    <string name="text_index_body_obesity_3">
        Ваш индекс массы тела свидетельствует о третей стадии ожирения. Вам следует срочно
        пересмотреть свой рацион питания и обязательно заняться спортом или фитнессом. Поход в спортзал пойдет
        Вам на пользу и поможет сбросить вес.
    </string>
    <string name="text_need_calories">Ваша суточная норма калорий:</string>
    <string name="text_bt_calculate_need_calories">Посчитать норму</string>
    <string name="text_need_calories_title">Норма калорий</string>
    <string name="text_need_calories_normal">Не изменяя вес:</string>
    <string name="text_need_calories_loss_weight">Для похудения:</string>
    <string name="text_need_calories_fast_loss_weight">Для быстрого похудения:</string>
    <string name="text_spinner_life_style_title">Степень физической нагрузки</string>
    <string name="alertChoiceUserInfoMessage">
        Введите значения пола, роста и веса:\n\nВозраст от 16 лет, рост от 75 см, вес от 25 кг</string>
    <string name="text_err_input_user_info_need_calories">Введите возраст, рост и вес!</string>
    <string name="text_need_calories_spinner_title">Выберите Ваш образ жизни:</string>
    <string name="text_step_counter">Пройдено</string>
    <string name="text_step_counter_steps">шагов</string>
    <string name="text_step_counter_from">из</string>
    <string name="text_bt_step_counter_start">Старт</string>
    <string name="text_bt_step_counter_stop">Стоп</string>
    <string name="text_bt_step_counter_reset">Сбросить</string>
    <string name="text_bt_step_counter_target">Выбрать цель</string>
    <string name="text_percent">%</string>
    <string name="alertTargetStepCountTitle">Ваша цель:</string>
    <string name="alertTargetStepCountMessage">
        Введите количество шагов, которое Вы хотите проходить ежедневно.\n\n(От 100 шагов)</string>
    <string name="alertTargetStepCountPositiveBt">Подтвердить</string>
    <string name="alertTargetStepCountNegativeBt">Отмена</string>
    <string name="toast_err_target_step_count">Введите количество шагов</string>
    <string name="hint_start_step_counter">Нажмите \"Старт\", чтобы включить шагомер</string>
    <string name="alertResetTitle">Сброс шагомера</string>
    <string name="alertResetMessage">Вы уверены, что хотите сбросить значение шагомера?</string>
    <string name="alertResetPositiveBt">Да</string>
    <string name="alertResetNegativeBt">Отмена</string>
    <string name="toastMistakeUserInfo">Введите параметры веса, роста и возраста!</string>
    <string name="tab_sport_article">Спорт</string>
    <string name="tab_food_article">Питание</string>
    <string name="tab_fitness_article">Фитнес</string>
    <string name="text_your_statistics">Статистика</string>
    <string name="tab_statistics_week">Неделя</string>
    <string name="tab_statistics_month">Месяц</string>
    <string name="text_days">Дни</string>
    <string name="text_your_normal_ccal">Норма</string>
    <string name="title_articles">Статьи</string>
    <string name="title_statistics">Моя статистика</string>
    <string name="toastMistakeMinValuesUserInfo">Введите значения возраста, веса и роста больше чем указанные минимальные значения</string>
    <string name="toastMistakeMinValuesUserPrefInfo">
        Введены значения возраста, веса и роста больше чем указанные минимальные значения! Данные не будут применены!</string>
    <string name="toastMistakeZero">Введите количество выбранной пищи больше 0 !</string>
    <string name="toastMistakeMinValuesIndexBody">Введите значения веса и роста больше чем указанные минимальные значения!</string>
    <string name="toast_mistake_min_target_step_count">Введите минимально допустимое значение цели!</string>
    <string name="help_activity_title">Помощь</string>
    <string name="help_text_calculators">
        В данном приложении есть 3 вида фитнес-калькуляторов: Пищевой калькулятор и калькуляторы индекса массы тела и
        потребности в калориях.\n\n
        Пищевой калькулятор позволяет Вам считать количество калорий, которые Вы потребили вместе с едой.
        Чтобы посчитать калории с его помощью, Вам необходимо выбрать из списка Вид потребленной пищи, а
        затем саму пищу, после чего в диалоговом окне ввести количество потребленной пищи.\n
        В верхней левой части экрана Вы можете просмотреть список потребленной за сегодня пищи, кликнув
        по кнопке \"Список\", а также поменять свои значения роста, веса, пола и возраста, исходя из которых
        калькулятор считает Вашу минимальную суточную потребность в калориях, кликнув по кнопке
        \"Изменить параметры\".\n\n
    </string>
    <string name="help_text_step_counter">
        В данном приложении Вы имеете возможность считать пройденные шаги с помощью шагомера.\n\n
        Чтобы запустить шагомер нажмите кнопку \"Старт\" в окне шагомера. Соответственно, для остановки и
        сброса текущего значения шагомера нажмите кнопки \"Стоп\", \"Сбросить\".\n\n
    </string>
    <string name="help_text_articles">
        Выбрав пункт меню \"Статьи\", Вы можете найти очень полезную информацию о спорте, питании и фитнесе,
        которая поможет Вас вести здоровый образ жизни.\n\n
    </string>
</resources>