<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionArticleItem"
        android:title="@string/nav_menu_item_article"
        android:orderInCategory="1"
        android:icon="@drawable/ic_subject_black_24dp"/>

    <item
        android:id="@+id/actionCaloriesCounterItem"
        android:title="@string/nav_menu_item_calories_counter"
        android:orderInCategory="1"
        android:icon="@drawable/ic_subject_black_24dp">
        <menu>
            <item android:id="@+id/ActionIndexBodyWeight"
                android:title="@string/nav_menu_item_index_body_weight"/>
            <item android:id="@+id/ActionDayNeedCalories"
                android:title="@string/nav_menu_item_day_need_cal"/>
            <item android:id="@+id/ActionCalculateFood"
                android:title="@string/nav_menu_item_calc_food"/>
        </menu>
    </item>

    <item
        android:id="@+id/actionSettingsItem"
        android:title="@string/nav_menu_item_settings"
        android:orderInCategory="1"
        android:icon="@drawable/ic_settings_black_24dp"/>
</menu>