<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionArticleItem"
        android:title="@string/nav_menu_item_article"
        android:orderInCategory="1"
        android:icon="@drawable/ic_subject_black_24dp"/>

    <!--<item
        android:id="@+id/actionStatisticsItem"
        android:title="@string/nav_menu_item_statistics"
        android:orderInCategory="1"
        android:icon="@drawable/ic_subject_black_24dp"/>-->


    <item
        android:id="@+id/actionSettingsItem"
        android:title="@string/nav_menu_item_settings"
        android:orderInCategory="1"
        android:icon="@drawable/ic_settings_black_24dp"/>

    <item
        android:id="@+id/actionAdditionalInfoItem"
        android:title="@string/nav_menu_item_additional_info"
        android:orderInCategory="1">

        <menu>
            <!--<item
                android:id="@+id/actionAboutUsItem"
                android:title="@string/nav_menu_item_about_us"
                android:orderInCategory="1"
                android:icon="@drawable/ic_info_black_24dp"/>
            -->
            <item
                android:id="@+id/actionHelpItem"
                android:title="@string/nav_menu_item_help"
                android:orderInCategory="1"
                android:icon="@drawable/ic_help_black_24dp"/>
        </menu>

    </item>

</menu>