<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioNeedCaloriesGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_info_from_DB"
                    android:id="@+id/radioFromDB"
                    android:layout_weight="1"
                    android:checked="true"
                    android:layout_marginBottom="10dp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_info_new_input_info"
                    android:id="@+id/radioFromCurrentInputData"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:checked="true" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioSexGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_your_sex_M"
                    android:id="@+id/radioMale"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_your_sex_F"
                    android:id="@+id/radioFemale"
                    android:layout_weight="1" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAlertUserAge"
                android:textSize="18sp"
                android:hint="@string/hint_age"
                android:padding="20dp"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAlertUserWeight"
                android:textSize="18sp"
                android:hint="@string/hint_weight"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:padding="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAlertUserHeight"
                android:textSize="18sp"
                android:hint="@string/hint_height"
                android:padding="20dp"
                android:maxLength="5"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>