<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewMain"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_normal_index_body_normal"
                    android:id="@+id/textViewNormal"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="25sp"
                    android:typeface="normal"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_normal_index_body_min"
                    android:id="@+id/textViewNormalMin"
                    android:textSize="22sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="#e6ad11"
                    android:padding="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_normal_index_body_ideal"
                    android:id="@+id/textViewNormalIdeal"
                    android:textSize="22sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textStyle="bold"
                    android:textColor="#2aa412"
                    android:padding="10dp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_normal_index_body_max"
                    android:id="@+id/textViewNormalMax"
                    android:textSize="22sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:typeface="normal"
                    android:textStyle="bold"
                    android:textColor="#e6ad11"
                    android:padding="10dp" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_normal_index_body_min_value"
                    android:id="@+id/textViewNormalMinValue"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textStyle="bold|italic"
                    android:textColor="#e6ad11"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_normal_index_body_ideal_value"
                    android:id="@+id/textViewNormalIdealValue"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textStyle="bold|italic"
                    android:textColor="#2aa412"
                    android:padding="10dp"
                    android:textIsSelectable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/text_normal_index_body_max_value"
                    android:id="@+id/textViewNormalMaxValue"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:typeface="normal"
                    android:textStyle="bold|italic"
                    android:textColor="#e6ad11"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_bt_calculate_index"
                    android:id="@+id/buttonCalculateIndexBody"
                    android:background="@drawable/ripple_green"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_your_index_body"
                android:id="@+id/textViewYourIndexText"
                android:layout_gravity="center_horizontal"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_zero"
                android:id="@+id/textViewIndexResult"
                android:layout_gravity="center_horizontal"
                android:padding="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewIndexDescription"
                android:padding="15dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>