<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewAlertIndexBody" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioIndexBodyGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_info_from_DB"
                    android:id="@+id/radioFromDB"
                    android:layout_weight="1"
                    android:checked="true"
                    android:layout_marginBottom="10dp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_user_info_new_input_info"
                    android:id="@+id/radioFromCurrentInputData"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAlertIndexBodyWeight"
                android:textSize="18sp"
                android:hint="@string/hint_weight"
                android:inputType="numberDecimal"
                android:padding="20dp"
                android:maxLength="4"
                android:enabled="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAlertIndexBodyHeight"
                android:textSize="18sp"
                android:hint="@string/hint_height"
                android:padding="20dp"
                android:maxLength="5"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>